Fix main-menu spacing bug

--- a/src/components/Header/MainMenu/index.css
+++ b/src/components/Header/MainMenu/index.css
@@ -19,10 +19,8 @@
 
 .main-menu-li {
   display: inline;
-  padding-top: 0px;
-  padding-bottom: 0px;
-  padding-left: max(7px, 1.1vw);
-  padding-right: max(7px, 1.1vw);
+
+  padding: 0 10px;
 }
 
 .main-menu-link {
